# atlas

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-SUSTAINABLE-USE  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: CODEOWNERS  allowed_signers
.github/actions/verify-wasm-pin-check/: README.md  action.yml
.github/actions/verify-wasm-pin-check/scripts/: check-lockfile-integrity-bun-text.sh  check-lockfile-integrity-bun.sh  check-lockfile-integrity-npm.sh  check-lockfile-integrity.sh  (+5 more)
.github/workflows/: atlas-arcadedb-smoke.yml  atlas-mem0g-smoke.yml  atlas-web-playwright.yml  hsm-byte-equivalence.yml  hsm-wave3-smoke.yml  hsm-witness-smoke.yml  sigstore-rekor-nightly.yml  verify-branch-protection.yml  verify-tag-signatures.yml  verify-trust-root-mutations.yml  verify-wasm-pin-check-self-test.yml  wasm-publish.yml
.handoff/: crit-architect.md  crit-business.md  crit-compliance.md  crit-database.md  crit-product.md  crit-security.md  decisions.md  next-session-bootstrap-w20b-2-shipped.md  pr-108-fix-commit-subagent-brief.md  v1.10-handoff.md  v1.11-handoff.md  v1.12-handoff.md  v1.13-handoff.md  v1.14-handoff.md  v1.15-handoff.md  v1.16-handoff.md  v1.17-handoff.md  v1.18-handoff.md  v1.19-handoff.md  v1.19-welle-11-plan.md  v1.19-welle-12-plan.md  v1.19-welle-13-plan.md  v1.19-welle-14a-resume.md  v1.6-phase2-handoff.md  v1.7-anchor-chain-handoff.md  v1.8-handoff.md  v1.9-handoff.md  v2-alpha-welle-1-plan.md  v2-alpha-welle-2-plan.md  v2-alpha-welle-3-plan.md  v2-alpha-welle-4-plan.md  v2-alpha-welle-5-plan.md  v2-alpha-welle-6-plan.md  v2-alpha-welle-7-plan.md  v2-alpha-welle-8-plan.md  v2-beta-welle-10-plan.md  v2-beta-welle-11-plan.md  v2-beta-welle-12-plan.md  v2-beta-welle-13-plan.md  v2-beta-welle-14-plan.md  (+20 more)
apps/atlas-mcp-server/: README.md  package.json  tsconfig.json
apps/atlas-mcp-server/scripts/: smoke.ts  test-anchor-json.ts  test-cypher-validator.ts  test-mcp-v2-tools.ts  test-redact-paths.ts  test-signer-binary-cache.ts  test-ulid.ts
apps/atlas-mcp-server/src/: bootstrap.ts  index.ts
apps/atlas-web/: next.config.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/atlas-web/scripts/: e2e-write-edge-cases.ts  e2e-write-roundtrip.ts
apps/wasm-playground/: .assetsignore  README.md  app.js  index.html  wrangler.toml
apps/wasm-playground/worker/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/atlas-mem0g/: Cargo.toml
crates/atlas-mem0g/src/: embedder.rs  lancedb_backend.rs  lib.rs  secure_delete.rs  supply_chain.rs
crates/atlas-mem0g/tests/: embedder_size_measurement.rs  embedding_determinism.rs  lancedb_body_e2e.rs  lancedb_windows_behaviour.rs  mem0g_benchmark.rs  secure_delete_correctness.rs
crates/atlas-projector/: Cargo.toml
crates/atlas-projector/src/: canonical.rs  emission.rs  error.rs  gate.rs  lib.rs  replay.rs  state.rs  upsert.rs
crates/atlas-projector/src/backend/: arcadedb.rs  in_memory.rs  mod.rs
crates/atlas-projector/src/backend/arcadedb/: client.rs  cypher.rs  mod.rs
crates/atlas-projector/tests/: arcadedb_benchmark.rs  backend_trait_conformance.rs  cross_backend_byte_determinism.rs  projection_gate_integration.rs  projector_pipeline_integration.rs
crates/atlas-signer/: Cargo.toml
crates/atlas-signer/examples/: seed_bank_demo.rs
crates/atlas-signer/src/: anchor.rs  chain.rs  keys.rs  lib.rs  main.rs  rekor_client.rs  test_support.rs  workspace_signer.rs
crates/atlas-signer/src/hsm/: config.rs  error.rs  mod.rs  pkcs11.rs  pkcs11_workspace.rs
crates/atlas-signer/tests/: hsm_byte_equivalence.rs  hsm_workspace_signer.rs
crates/atlas-trust-core/: Cargo.toml
crates/atlas-trust-core/src/: agent_did.rs  anchor.rs  cose.rs  ct.rs  ed25519.rs  error.rs  hashchain.rs  lib.rs  per_tenant.rs  projector_attestation.rs  pubkey_bundle.rs  trace_format.rs  verify.rs  witness.rs
crates/atlas-trust-core/tests/: agent_did_integration.rs  anchor_chain_adversary.rs  const_time_kid_invariant.rs  golden_traces.rs  per_tenant_keys_adversary.rs  projector_attestation_integration.rs  sigstore_golden.rs  verify_outcome_witness_failures.rs  witness_strict_mode.rs
crates/atlas-trust-core/tests/fixtures/: sigstore_rekor_v1_logindex_800000000.json
crates/atlas-verify-cli/: Cargo.toml
crates/atlas-verify-cli/src/: main.rs
crates/atlas-verify-cli/tests/: strict_mode.rs  witness_failures_json.rs
crates/atlas-verify-wasm/: Cargo.toml
crates/atlas-verify-wasm/src/: lib.rs
crates/atlas-witness/: Cargo.toml
crates/atlas-witness/src/: ed25519_witness.rs  lib.rs  main.rs
crates/atlas-witness/src/hsm/: config.rs  error.rs  mod.rs  pkcs11.rs
crates/atlas-witness/tests/: hsm_witness_byte_equivalence.rs
docs/: ARCHITECTURE.md  COMPLIANCE-MAPPING.md  CONSUMER-RUNBOOK.md  OPERATOR-RUNBOOK-V2-ALPHA-1.md  OPERATOR-RUNBOOK.md  SECURITY-NOTES.md  SEMVER-AUDIT-V1.0.md  SEMVER-AUDIT-V2.0-beta.md  V1.16-WELLE-C-PLAN.md  V2-ALPHA-1-RELEASE-NOTES.md  V2-ALPHA-2-RELEASE-NOTES.md  V2-ALPHA-DB-SPIKE.md  V2-BETA-1-RELEASE-NOTES.md  V2-BETA-ARCADEDB-SPIKE.md  V2-BETA-DEPENDENCY-GRAPH.md  V2-BETA-MEM0G-SPIKE.md  V2-BETA-ORCHESTRATION-PLAN.md  V2-MASTER-PLAN.md  WORKING-METHODOLOGY.md
docs/ADR/: ADR-Atlas-006-multi-issuer-sigstore-tracking.md  ADR-Atlas-007-parallel-projection-design.md  ADR-Atlas-008-wasm-publish-race-postmortem.md  ADR-Atlas-009-cypher-validator-consolidation-rationale.md  ADR-Atlas-010-arcadedb-backend-choice-and-embedded-mode-tradeoff.md  ADR-Atlas-011-arcadedb-driver-scaffold.md  ADR-Atlas-012-mem0g-layer3-design.md
examples/golden-traces/: bank-q1-2026.pubkey-bundle.json  bank-q1-2026.trace.json
infra/: docker-compose.arcadedb-smoke.yml
scripts/: build-wasm.sh
tools/: cross-version-anchor-compat.sh  expected-master-ruleset.json  install-git-hooks.sh  playground-csp-check.sh  run-arcadedb-smoke-local.sh  setup-tag-signing.sh  test-tag-signatures.sh  test-trust-root-mutations.sh  verify-master-ruleset.sh  verify-tag-signatures.sh  verify-trust-root-mutations.sh  w18c-phase-a-resolve.sh
tools/git-hooks/: pre-commit
(+163 files in other folders)
