[workspace]
resolver = "2"
members = [
    "crates/atlas-trust-core",
    "crates/atlas-verify-cli",
    "crates/atlas-verify-wasm",
    "crates/atlas-signer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nelson Mehlis <nelson@ultranova.io>"]
license = "Apache-2.0"
repository = "https://github.com/ultranova/atlas"
rust-version = "1.85"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core"] }
coset = "0.3"
ciborium = "0.2"
blake3 = "1.5"
# ECDSA P-256 + SHA-256: required for V1.6 Sigstore Rekor verification path
# (Rekor signs checkpoints with ECDSA P-256 over RFC 6962 SHA-256 trees).
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "pkcs8", "std"] }
sha2 = "0.10"
# HKDF-SHA256 (RFC 5869). V1.9 issuer-side per-tenant Ed25519 derivation
# from a single master seed. Verifier never imports this — the verifier
# sees only derived pubkeys via the PubkeyBundle.
hkdf = "0.12"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
ulid = { version = "1.1", features = ["serde"] }

# Errors
thiserror = "1.0"

# Encoding
base64 = "0.22"
hex = "0.4"

# Constant-time compare (defence against timing side-channels on hash equality)
subtle = "2.5"

# WASM (only used by wasm crate)
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# CLI (only used by cli crate)
clap = { version = "4.5", features = ["derive"] }

# Policy (only used in server-side later)
# cedar-policy = "4.2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"  # Size-optimized for browser bundle
