[workspace]
resolver = "2"
members = [
    "crates/atlas-trust-core",
    "crates/atlas-verify-cli",
    "crates/atlas-verify-wasm",
    # V1.10 wave 2 note: the sealed-seed loader was originally a sibling
    # `atlas-signer-hsm` crate, but Cargo's no-cycles rule prevented
    # `atlas-signer`'s binary from dispatching to a sibling that itself
    # depended on `atlas-signer` for the `MasterSeedHkdf` trait. The
    # loader now lives in-tree at `crates/atlas-signer/src/hsm/` behind
    # the `hsm` feature flag — same operator opt-in semantics, no cycle.
    "crates/atlas-signer",
    # V1.13 Scope C wave 1: independent witness cosignature attestor.
    # Runs as its own binary (Trust-Domain separation from atlas-signer)
    # and depends only on `atlas-trust-core` for the WitnessSig type +
    # `witness_signing_input` helper. Atlas-trust-core does NOT depend
    # on atlas-witness — clean DAG, no cycle.
    "crates/atlas-witness",
    # V2-α Welle 3: Layer-2 graph projection canonicalisation crate.
    # Depends on atlas-trust-core ONLY for `agent_did::validate_agent_did`
    # (cross-validation of `author_did` stamping on graph nodes/edges).
    # atlas-trust-core does NOT depend on atlas-projector — clean DAG,
    # no cycle. Verifier-side ProjectorRunAttestation parsing (Welle 4)
    # will live in atlas-trust-core; the projector crate produces the
    # graph-state-hash that the attestation event payload carries.
    "crates/atlas-projector",
    # V2-β Welle 18b: Layer-3 semantic cache crate (Mem0g concept).
    # Implements ADR-Atlas-012's binding sub-decisions: LanceDB embedded
    # + fastembed-rs paired (default-OFF feature `lancedb-backend`),
    # Atlas-owned secure-delete wrapper, supply-chain-verified model
    # download. Depends on atlas-trust-core for `AtlasEvent`; no cycle.
    "crates/atlas-mem0g",
]

[workspace.package]
version = "2.0.0-alpha.2"
edition = "2024"
authors = ["Nelson Mehlis <nelson@ultranova.io>"]
license = "Apache-2.0"
repository = "https://github.com/ThePyth0nKid/atlas"
rust-version = "1.85"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core"] }
coset = "0.3"
ciborium = "0.2"
blake3 = "1.5"
# ECDSA P-256 + SHA-256: required for V1.6 Sigstore Rekor verification path
# (Rekor signs checkpoints with ECDSA P-256 over RFC 6962 SHA-256 trees).
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "pkcs8", "std"] }
sha2 = "0.10"
# HKDF-SHA256 (RFC 5869). V1.9 issuer-side per-tenant Ed25519 derivation
# from a single master seed. Verifier never imports this — the verifier
# sees only derived pubkeys via the PubkeyBundle.
hkdf = "0.12"
# V1.10 wave 2: scrub heap-resident secret material (PIN bytes, derived
# 32-byte HKDF output, intermediate stack arrays) so neither core dumps
# nor freed-allocator pages leak the seed. Used by atlas-signer's HSM
# backend and the dispatcher that hands derived bytes to ed25519-dalek.
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# V1.13 atlas-witness key generation. OS CSPRNG for fresh witness
# keypair entropy. Witness keys are long-lived and high-trust, so we
# pin to `rand_core` (the minimal RNG-trait crate) with `getrandom` to
# pull from the kernel directly rather than the heavier `rand` umbrella.
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

# V1.14 Scope I — PKCS#11 v3.0 bindings. Pinned to 0.12 series:
#   * 0.11 introduced HKDF mechanisms (used by atlas-signer wave-2).
#   * 0.12 marks `Session: Send` (used by atlas-signer wave-3 and
#     V1.14 atlas-witness). Decouples session lifetime from `Pkcs11`
#     context so we can hold an authenticated session behind a `Mutex`
#     without fighting the borrow checker.
# Workspace-pinned (instead of per-crate) so atlas-signer and
# atlas-witness move in lockstep — a vendor-divergent bump in one and
# not the other would silently produce two FFI ABIs against the same
# SoftHSM2 token in CI. Per-crate Cargo.toml flags it `optional = true`
# behind the `hsm` feature.
cryptoki = { version = "0.12" }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
ulid = { version = "1.1", features = ["serde"] }

# Errors
thiserror = "1.0"

# Encoding
base64 = "0.22"
hex = "0.4"

# Constant-time compare (defence against timing side-channels on hash equality)
subtle = "2.5"

# WASM (only used by wasm crate)
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# CLI (only used by cli crate)
clap = { version = "4.5", features = ["derive"] }

# Policy (only used in server-side later)
# cedar-policy = "4.2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"  # Size-optimized for browser bundle
