[package]
name = "atlas-trust-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Portable, deterministic verifier for Atlas verifiable knowledge graphs. Apache-2.0."

[lib]
crate-type = ["rlib"]

[dependencies]
ed25519-dalek = { workspace = true }
coset = { workspace = true }
ciborium = { workspace = true }
blake3 = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
# `wasm` feature: signals we're compiled for WASM target — disables std-only paths.
wasm = []
