[package]
name = "atlas-verify-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Standalone CLI verifier for Atlas trace bundles. Apache-2.0."

[[bin]]
name = "atlas-verify-cli"
path = "src/main.rs"

[dependencies]
atlas-trust-core = { path = "../atlas-trust-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# V1.14 Scope J-c — CLI integration tests need to materialise a trace
# bundle with bad witnesses on disk before invoking the CLI binary.
# `tempfile` provides a tmpdir that is automatically cleaned up.
tempfile = "3"
# Used by the trace-builder fixture in tests/witness_failures_json.rs
# to mint event signatures and witness payloads inline (rather than
# committing a hand-crafted JSON fixture which would need to be
# regenerated whenever the wire schema evolves).
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
