[package]
name = "atlas-verify-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASM build of atlas-trust-core for use in the browser. Apache-2.0."

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# Bundled wasm-opt 0.116 cannot handle bulk-memory ops produced by recent rustc.
# Skip post-processing — output is already optimised by rustc with opt-level=z.
wasm-opt = false

[dependencies]
atlas-trust-core = { path = "../atlas-trust-core" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
# Force wasm_js backend for getrandom 0.3 on wasm32 (direct or future
# transitive dep).
getrandom = { version = "0.3", features = ["wasm_js"] }

# `ed25519-dalek 2.x` and `p256` (transitively through `crypto-bigint`,
# `elliptic-curve`, `ff`, etc.) pull `rand_core 0.6` which depends on
# `getrandom 0.2`. Cargo treats `getrandom 0.2` and `getrandom 0.3` as
# distinct crates, so the `wasm_js` feature on the 0.3 line above does
# NOT propagate to the 0.2 line — the 0.2 line still emits the
# wasm32-unknown-unknown `compile_error!` unless its `js` feature is
# enabled. Added as a renamed direct dep so the feature is explicitly
# turned on in this crate's wasm32 dep graph. The WASM build fails to
# compile without it. (V1.14 Scope E — required for the wasm-pack
# lane to produce a working npm artefact.)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
