[package]
name = "atlas-witness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# V1.13 Scope C wave 1 — independent witness cosignature attestor.
#
# A witness signs over the Atlas anchor-chain head with its own Ed25519
# keypair, producing a `WitnessSig` that the verifier resolves against
# `ATLAS_WITNESS_V1_ROSTER` (pinned in `atlas-trust-core`). Operationally
# the witness runs as the `atlas-witness` binary, separate from the
# `atlas-signer` process — that separation is the entire point: a
# witness in the same process as the signer is "the same machine signed
# twice", not an independent attestation.
#
# Crate dependency direction: `atlas-witness` → `atlas-trust-core`.
# Trust-core does NOT depend on atlas-witness, so the no-cycles rule
# (V1.10 footgun #13) holds.

[lib]
name = "atlas_witness"
path = "src/lib.rs"

[[bin]]
name = "atlas-witness"
path = "src/main.rs"

[dependencies]
atlas-trust-core = { path = "../atlas-trust-core" }
ed25519-dalek = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand_core = { workspace = true }
# NOTE: thiserror was listed during the initial scaffold but never
# imported — the witness library uses `String` errors at the trait
# boundary (V1.11 footgun #20 dyn-safety pattern), and the binary uses
# the same `Result<_, String>` shape. Adding thiserror back would only
# be justified by introducing a structured error variant in the lib.

# V1.14 Scope I — PKCS#11 v3.0 bindings for the HSM-backed witness.
# Optional + feature-gated to mirror atlas-signer: the crate compiles
# in any context (WASM verifier builds, doc-only CI, default lints),
# and the stub `Pkcs11Witness` returns `String` errors at the trait
# boundary when the feature is off. Workspace-pinned so atlas-signer
# and atlas-witness share a single FFI ABI against the SoftHSM2 token
# in the CI byte-equivalence lane (vendor-divergent bumps would
# silently break that lane).
#
# Trust-domain note: even though atlas-signer and atlas-witness share
# the cryptoki crate, they do NOT share PKCS#11 modules at runtime.
# Each binary opens its own `Pkcs11` context, authenticates with its
# own `ATLAS_*_HSM_PIN_FILE`, and operates on its own CKA_LABEL prefix
# (`atlas-workspace-key-v1:` vs `atlas-witness-key-v1:`). The shared
# library version is purely a build-time invariant; runtime isolation
# is enforced by separate processes + separate slot/PIN trios.
cryptoki = { workspace = true, optional = true }

[features]
# Default off so the crate compiles in any workspace context (mirrors
# atlas-signer). Operators who want the HSM-backed witness path enable
# the feature explicitly via `--features hsm`. Without it, the stub in
# `src/hsm/mod.rs` (under `#[cfg(not(feature = "hsm"))]`) takes the
# place of the real `Pkcs11Witness` and fails closed with a clear
# remediation message at runtime.
default = []

# Enable the PKCS#11 HSM-backed witness backend. Pulls in cryptoki and
# exposes the real `crate::hsm::pkcs11::Pkcs11Witness` impl.
hsm = ["dep:cryptoki"]

[dev-dependencies]
# V1.14 Scope I — isolated SoftHSM2 token dirs + PIN files for the
# byte-equivalence integration test. Mirrors atlas-signer's pattern.
tempfile = "3"
